# open-ocean

./: README.md  pyproject.toml  requirements.txt
notebooks/: compare_one_and_two_step_gridding.ipynb  compare_to_hadsst4.ipynb  interpolation_examples.ipynb  sampling_uncertainty.ipynb  ships_drifters.ipynb  timeseries_with_uncertainty.ipynb
open_ocean/: get_data.py  gridder.py  interpolation.py  utils.py
scripts/: __init__.py  cci_resampler.py  check_sst_cci_download.py  download_sst_cci_climatology.py  get_data.py  grid_some_obs.py  gridder_experiments.py  icoads.py  iquam_files.txt  regions.json
tests/: test_gridder.py  test_interpolation.py
